fix tinymce iframe z-index css in questions#edit

--- a/public/css/testsuite.css
+++ b/public/css/testsuite.css
@@ -6,6 +6,7 @@ html {
 * {
 	cursor: default;
 	outline: 0;
+	z-index: 99999 !important;
 }
 
 a, a img, textarea {
@@ -224,6 +225,7 @@ iframe {
 	border: none;
 	width: 100%;
 	height: 275px;
+	z-index: 0 !important;
 }
 
 label.small {
@@ -459,4 +461,8 @@ span#cpr_year {
 
 .invisible {
 	display: none;
+}
+
+.tox, .tox-tinymce, .tox *, .tox-tinymce * {
+	z-index: 0 !important;
 }
